Make small markups

--- a/cv/cv.html
+++ b/cv/cv.html
@@ -20,14 +20,11 @@
     </header>
     <main>
         <section>
-            <h2>My CV</h2>
+            <h2>My CV - Fiona King - Software Engineer</h2>
+            <br>
             <div class="container">
-                <header>
-                    <h1>Fiona King</h1>
-                    <p>Software Engineer</p>
-                </header>
                 <section>
-                    <h2>Contact Information</h2>
+                    <h3>Contact Information</h3>
                     <ul>
                         <li>Email: fionaking@example.com</li>
                         <li>Phone: +1234567890</li>
@@ -35,22 +32,22 @@
                     </ul>
                 </section>
                 <section>
-                    <h2>Skills</h2>
+                    <h3>Skills</h3>
                     <ul>
                         <li>HTML</li>
                         <li>CSS</li>
                     </ul>
                 </section>
                 <section>
-                    <h2>Experience</h2>
-                    <h3>CEO, Fiona's Website (2024 - Present)</h3>
+                    <h3>Experience</h3>
+                    <h4>CEO, Fiona's Website (2024 - Present)</h4>
                     <p>Did lots of important things.</p>
-                    <h3>Software Engineer, Microsoft (2021 - Present)</h3>
+                    <h4>Software Engineer, Microsoft (2021 - Present)</h4>
                     <p>Did lots more important things.</p>
                 </section>
                 <section>
-                    <h2>Education</h2>
-                    <h3>SQA Highers</h3>
+                    <h3>Education</h3>
+                    <h4>SQA Highers</h4>
                     <p>Learned lots of important things.</p>
                 </section>
             </div>
